Disabling multicast on vlan interface caused kernel panic.

PR:		kern/40723
Submitted by:	Hideki ONO <ono@kame.net>
MFC after:	1 week